chore: change stack column name in project table to tags (#660)
* chore: change stack column name in project table to tags

* Simplify migration
