# apps/backend/docs/swagger.json
@@ -1050,14 +1050,14 @@
                 "preview": {
                     "type": "string"
                 },
-                "stack": {
+                "sub_title": {
+                    "type": "string"
+                },
+                "tags": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
-                },
-                "sub_title": {
-                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -1156,14 +1156,14 @@
                 "preview": {
                     "type": "string"
                 },
-                "stack": {
+                "sub_title": {
+                    "type": "string"
+                },
+                "tags": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
-                },
-                "sub_title": {
-                    "type": "string"
                 },
                 "title": {
                     "type": "string"
