# apps/backend/internal/handler/v1/project.go
@@ -157,7 +157,7 @@ func (h *projectServiceHandler) Create(w http.ResponseWriter, r *http.Request) {
 		Title:       createReq.Title,
 		SubTitle:    createReq.SubTitle,
 		Description: createReq.Description,
-		Stack:       createReq.Stack,
+		Tags:        createReq.Tags,
 		Type:        domain.ProjectType(createReq.Type),
 		Link:        createReq.Link,
 		EducationID: createReq.EducationID,
@@ -277,7 +277,7 @@ func (h *projectServiceHandler) Update(w http.ResponseWriter, r *http.Request) {
 		Title:       updateReq.Title,
 		SubTitle:    updateReq.SubTitle,
 		Description: updateReq.Description,
-		Stack:       updateReq.Stack,
+		Tags:        updateReq.Tags,
 		Type:        domain.ProjectType(updateReq.Type),
 		Link:        updateReq.Link,
 		EducationID: updateReq.EducationID,
